tests/toy/neg/001160_mutation.toylang
program a = { int a = a; } .
